After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677314 - crash: navigating the overview with arrow keys
crash: navigating the overview with arrow keys
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: shell
git master
Other Linux
: Normal critical
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-01 21:53 UTC by Volker Sobek (weld)
Modified: 2012-06-06 15:15 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Volker Sobek (weld) 2012-06-01 21:53:50 UTC
Open gnome-control-center, press tab to highlight the first entry, press the right arrow key repeatedly until past the last item in the first row ...

(gnome-control-center:3083): GLib-GObject-WARNING **: invalid cast from `GtkSeparator' to `CcShellCategoryView'

Program received signal SIGSEGV, Segmentation fault.
0x000000000040d934 in cc_shell_category_view_get_item_view (self=0x89a3c0)
    at cc-shell-category-view.c:219
219	  return (CcShellItemView*) self->priv->iconview;
Missing separate debuginfos, use: debuginfo-install cracklib-2.8.18-3.fc17.x86_64 libXt-1.1.2-2.fc17.x86_64 libicu-4.8.1.1-2.fc17.x86_64 libuuid-2.21.2-1.fc17.x86_64 libxslt-1.1.26-9.fc17.x86_64 llvm-libs-3.0-13.fc17.x86_64
(gdb) bt full
  • #0 cc_shell_category_view_get_item_view
    at cc-shell-category-view.c line 219
  • #1 get_item_views
    at gnome-control-center.c line 309
  • #2 keynav_failed
    at gnome-control-center.c line 333
  • #3 _gtk_marshal_BOOLEAN__ENUM
    at gtkmarshalers.c line 269
  • #4 g_closure_invoke
    at gclosure.c line 777
  • #5 signal_emit_unlocked_R
    at gsignal.c line 3547
  • #6 g_signal_emit_valist
    at gsignal.c line 3306
  • #7 g_signal_emit
    at gsignal.c line 3352
  • #8 gtk_widget_keynav_failed
    at gtkwidget.c line 9233
  • #9 gtk_icon_view_move_cursor_left_right
    at gtkiconview.c line 3965
  • #10 gtk_icon_view_real_move_cursor
    at gtkiconview.c line 3606
  • #11 _gtk_marshal_BOOLEAN__ENUM_INT
    at gtkmarshalers.c line 531
  • #12 g_closure_invoke
    at gclosure.c line 777
  • #13 signal_emit_unlocked_R
    at gsignal.c line 3585
  • #14 g_signal_emitv
    at gsignal.c line 3037
  • #15 gtk_binding_entry_activate
  • #16 binding_activate
  • #17 gtk_bindings_activate_list
    at gtkbindings.c line 1584
  • #18 gtk_bindings_activate_event
    at gtkbindings.c line 1669
  • #19 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #20 _g_closure_invoke_va
    at gclosure.c line 840
  • #21 g_signal_emit_valist
    at gsignal.c line 3207
  • #22 g_signal_emit
    at gsignal.c line 3352
  • #23 gtk_widget_event_internal
    at gtkwidget.c line 6289
  • #24 gtk_widget_event
    at gtkwidget.c line 5946
  • #25 gtk_window_propagate_key_event
    at gtkwindow.c line 6053
  • #26 gtk_window_key_press_event
    at gtkwindow.c line 6083
  • #27 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #28 g_closure_invoke
  • #29 signal_emit_unlocked_R
    at gsignal.c line 3585
  • #30 g_signal_emit_valist
    at gsignal.c line 3306
  • #31 g_signal_emit
    at gsignal.c line 3352
  • #32 gtk_widget_event_internal
    at gtkwidget.c line 6289
  • #33 propagate_event
    at gtkmain.c line 2480
  • #34 gtk_main_do_event
    at gtkmain.c line 1714
  • #35 gdk_event_source_dispatch
    at gdkeventsource.c line 358
  • #36 g_main_dispatch
    at gmain.c line 2539
  • #37 g_main_context_dispatch
    at gmain.c line 3075
  • #38 g_main_context_iterate
    at gmain.c line 3146
  • #39 g_main_context_iteration
    at gmain.c line 3207
  • #40 g_application_run
    at gapplication.c line 1607
  • #41 main
    at control-center.c line 256

Comment 1 Bastien Nocera 2012-06-06 15:15:36 UTC
commit f2a9d3a4787e69f1c27fa8e2b328ec82fb707302
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Jun 6 16:11:26 2012 +0100

    shell: Fix crash when using keynav in overview
    
    get_item_views() was expecting all the children of the overview
    to be of type "CcShellCategoryView".
    
    It's not the case since 620e70113c30b0ae868577153dda60139f3c20b4
    added GtkSeparators as children.
    
    We now just skip them non-views in get_item_views().
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677314