shell: Fix crash when using keynav in overview

get_item_views() was expecting all the children of the overview
to be of type "CcShellCategoryView".

It's not the case since 620e70113c30b0ae868577153dda60139f3c20b4
added GtkSeparators as children.

We now just skip them non-views in get_item_views().

https://bugzilla.gnome.org/show_bug.cgi?id=677314